[FIX] web, hr_holidays: formView overflowing in modal
The formView inside the modal in the Time Off module was overflowing.
A negative margin was applied in a previous fix for the ribbons which
shouldn't have been applied in 80098df3dddd65295988221477aea8a5dba7bc5c
hr_leave_views.xml#L244

Removing this helps, but was not the whole issue.
Removing the overflow-hidden on the `.form-sheet` and removing the
padding on `.hr_leave_column` fixed the issue.

Another issue arose while fixing this:

Ribbons on formViews within the modal have a space around them because
of the padding on `.o_form_sheet_bg`.
Switching the padding from `.o_form_sheet_bg` to `
.o_form_sheet` when inside a modal fixes this for all formviews within
modals that may have a ribbon.

task-3414251
part of task-3326263

--- a/addons/hr_holidays/static/src/scss/time_off.scss
+++ b/addons/hr_holidays/static/src/scss/time_off.scss
@@ -1,7 +1,5 @@
 .o_hr_leave_form {
-    .o_form_sheet {
-        overflow: hidden;
-    }
+
     .o_hr_leave_content {
         .o_group {
             margin: 0;
@@ -20,9 +18,7 @@
         .o_hr_leave_subtitle {
             font-size: 1.2rem;
         }
-        .o_hr_leave_column {
-            padding: 16px;
-        }
+
         .col_right {
             background-color: map-get($grays, '200');
             padding-top: 28px;
