--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -237,9 +237,10 @@
 
     // Sheet BG
     .o_form_sheet_bg {
+        --formView-sheetBg-padding-top:  #{map-get($spacers, 2)};
         --formView-sheetBg-padding-x: #{map-get($spacers, 3)};
 
-        padding-top: map-get($spacers, 2);
+        padding-top: var(--formView-sheetBg-padding-top);;
         padding-left: var(--formView-sheetBg-padding-x);
         padding-right: var(--formView-sheetBg-padding-x);
         width: 100%;
@@ -981,20 +982,22 @@
     .o_form_view {
         min-height: auto;
 
-        --formView-sheetBg-padding-top: #{map-get($spacers, 2)};
-        --formView-sheetBg-padding-x: #{$modal-inner-padding};
+        .o_form_sheet_bg {
+            --formView-sheetBg-padding-top: 0;
+            --formView-sheetBg-padding-x: 0;
+        }
     }
 
     .o_form_sheet {
         --formView-sheet-margin-x: 0;
-        --formView-sheet-padding-y: #{map-get($spacers, 2)};
-        --formView-sheet-padding-y-md: #{map-get($spacers, 2)};
-        --formView-sheet-padding-y-lg: #{map-get($spacers, 2)};
-        --formView-sheet-padding-y-xxl: #{map-get($spacers, 2)};
-        --formView-sheet-padding-x: 0;
-        --formView-sheet-padding-x-md: 0;
-        --formView-sheet-padding-x-lg: 0;
-        --formView-sheet-padding-x-xxl: 0;
+        --formView-sheet-padding-y: #{map-get($spacers, 3)};
+        --formView-sheet-padding-y-md: #{map-get($spacers, 3)};
+        --formView-sheet-padding-y-lg: #{map-get($spacers, 3)};
+        --formView-sheet-padding-y-xxl: #{map-get($spacers, 3)};
+        --formView-sheet-padding-x: #{map-get($spacers, 3)};
+        --formView-sheet-padding-x-md: #{map-get($spacers, 3)};;
+        --formView-sheet-padding-x-lg: #{map-get($spacers, 3)};;
+        --formView-sheet-padding-x-xxl: #{map-get($spacers, 3)};;
         --formView-sheet-border-radius: 0;
         --formView-sheet-border-width: 0;
         --formView-sheet-border-width-md: 0;
@@ -1005,8 +1008,8 @@
     }
 
     .o_notebook {
-        --notebook-margin-x: calc(var(--formView-sheetBg-padding-x) * -1);
-        --notebook-padding-x: var(--formView-sheetBg-padding-x);
+        --notebook-margin-x: calc(var(--formView-sheet-padding-x) * -1);
+        --notebook-padding-x: var(--formView-sheet-padding-x);
     }
 
     &.o_onboarding_payment_provider_wizard .o_form_renderer {
