--- a/addons/web/static/src/views/widgets/ribbon/ribbon.scss
+++ b/addons/web/static/src/views/widgets/ribbon/ribbon.scss
@@ -57,6 +57,10 @@
     }
 }
 
+.modal .ribbon {
+    --Ribbon-gap-right: 0;
+}
+
 // after ribbon widget there can be field widgets or oe_title which may
 // have widgets on right end, add margin-right so ribbon not overlap on it
 .ribbon {
